Fix weird bottom spacing glitch in Text Component

--- a/app/components/RichText/RichText.module.scss
+++ b/app/components/RichText/RichText.module.scss
@@ -3,8 +3,17 @@
   color: #555;
   line-height: 1.8;
 
+  > :last-child {
+    margin-bottom: 0;
+  }
+
   p {
     margin-bottom: 1em;
+
+    &:empty {
+      display: none;
+      margin: 0;
+    }
 
     &:last-child {
       margin-bottom: 0;
